# OOP

./: README.md
Lab10_11/Lab10-11/: CMakeLists.txt  domain.cpp  domain.h  exceptions.h  gui.cpp  gui.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h  tests.cpp  tests.h  undo.cpp  undo.h  wishlist.cpp  wishlist.h
Melodii-tipuri/: CMakeLists.txt  domain.h  main.cpp  mainwindow.cpp  mainwindow.h  melodii.txt  model.cpp  model.h  observer.h  repository.cpp  repository.h  service.cpp  service.h  test.cpp  test.h
Melodii_rank/: CMakeLists.txt  domain.cpp  domain.h  gui.cpp  gui.h  main.cpp  observer.h  repository.cpp  repository.h  service.cpp  service.h  songs.txt  tablemodel.cpp  tablemodel.h  test.cpp  test.h
Produse/: CMakeLists.txt  domain.cpp  domain.h  gui.h  main.cpp  observer.h  produse.txt  repository.cpp  repository.h  service.h  tablemodel.h  test.cpp  test.h  test.txt
Studenti/: CMakeLists.txt  domain.cpp  domain.h  gui.cpp  gui.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h  studenti.txt  tablemodel.h  test.cpp  test.h  undo.cpp  undo.h
Studenti2/: CMakeLists.txt  domain.h  gui.cpp  gui.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h  studenti.txt  tablemodel.h  test.h  test.txt  undo.cpp  undo.h
Tasks/: CMakeLists.txt  domain.h  gui.cpp  gui.h  main.cpp  observer.h  repository.cpp  repository.h  secondary_window.cpp  secondary_window.h  service.cpp  service.h  tablemodel.cpp  tablemodel.h  tasks.txt  test.cpp  test.h  test.txt
Tractoare/: CMakeLists.txt  domain.h  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.h  observer.h  repository.cpp  repository.h  service.cpp  service.h  tractoare.txt
Utilaje/: CMakeLists.txt  domain.h  gui.cpp  gui.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h  tablemodel.cpp  tablemodel.h  test.cpp  test.h  test.txt  utilaje.txt
X0/: CMakeLists.txt  domain.cpp  domain.h  gui.cpp  gui.h  jocuri.txt  main.cpp  repository.cpp  repository.h  service.cpp  service.h  tablemodel.h  test.cpp  test.h  validator.cpp  validator.h
